<resources>
    <string name="app_name">LoveColculation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="_0">0%</string>
    <string name="fir_name">First Name</string>
    <string name="sec_name">Second Name</string>
    <string name="calculate">calculate</string>
</resources>