<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".fragments.CalculateFragment">

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/fir_name"
        android:textColor="@color/black"
        android:textStyle="italic|bold"/>

    <EditText
        android:id="@+id/second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/sec_name"
        android:textColor="@color/black"
        android:textStyle="italic|bold"/>

    <Button
        android:id="@+id/calculate"
        android:textSize="30sp"
        android:layout_marginTop="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:backgroundTint="@color/purple_200"
        android:text="@string/calculate"/>

</LinearLayout>