<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".ResultFragment">

    <TextView
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/first_name"
        android:textSize="30sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/sname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/second_name"
        android:textSize="30sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_0"
        android:textSize="30sp"
        android:textStyle="italic|bold" />

    <TextView
        android:id="@+id/resultt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Result"
        android:textSize="30sp"
        android:textStyle="italic|bold" />

    <Button
        android:id="@+id/again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Try again"
        android:textSize="30sp"
        android:textStyle="bold|italic"

        />


</LinearLayout>